--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "animate.css": "4.1.1",
     "axios": "^0.24.0",
     "classnames": "2.3.1",
+    "firebase": "^9.5.0",
     "moment": "2.29.1",
     "next": "12.0.4",
     "next-compose-plugins": "2.2.1",
