--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && rm -rf .next/ && npm install && npm run dev",
     "compile-sass": "node-sass styles/scss/nextjs-material-kit-pro.scss styles/css/nextjs-material-kit-pro.css",
     "minify-sass": "node-sass styles/scss/nextjs-material-kit-pro.scss styles/css/nextjs-material-kit-pro.min.css --output-style compressed",
