--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "animate.css": "4.1.1",
     "axios": "^0.24.0",
     "classnames": "2.3.1",
+    "dotenv": "^10.0.0",
     "firebase": "^9.5.0",
+    "fs": "^0.0.1-security",
     "moment": "2.29.1",
     "next": "12.0.4",
     "next-compose-plugins": "2.2.1",
